<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:checked="true"
            android:icon="@drawable/ic_photo_camera"
            android:title="@string/item_inicio" />
        <item
            android:id="@+id/nav_plantas"
            android:icon="@drawable/ic_plants"
            android:title="@string/item_plantas" />
        <item
            android:id="@+id/nav_plagas"
            android:icon="@drawable/ic_plagas"
            android:title="@string/item_plagas"
            />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report_problem"
            android:title="@string/item_report"
            />
        <!--Config section -->

        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuration_item">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_applications"
                    android:title="@string/item_settings"
                    />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_account_box"
                    android:title="@string/item_about"
                    />
            </menu>

        </item>

    </group>
</menu>